<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="@drawable/white"
	android:gravity="center_horizontal">

	<TextView android:id="@+id/txt" 
        android:text="@string/hello"
        android:textColor="@drawable/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		/>

	<EditText
	    android:id="@+id/city"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:ems="10" android:hint="Input the City Name">
        
	    <requestFocus />
	</EditText>
	
	    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/hotels_prompt"
    />
	    <Spinner 
        android:id="@+id/spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/hotels_prompt"
    />

	    <Button
	        android:id="@+id/searchButton"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="Search" />
	    
	    <com.facebook.android.LoginButton
	        android:id="@+id/login"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_margin="30dp"
	        android:src="@drawable/login_button" />

	    <TextView
	        android:id="@+id/txt"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/login"
	        android:textColor="@drawable/black" />
		
	<Button android:id="@+id/uploadButton"
        android:text="@string/upload"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:paddingRight="20dp" 
        android:paddingLeft="20dp"
        android:layout_margin="20dp" 
        />
        
	<Button android:id="@+id/requestButton"
        android:text="@string/request"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:paddingRight="20dp" 
        android:paddingLeft="20dp"
        android:layout_margin="20dp" 
        />

	<Button android:id="@+id/postButton" 
        android:text="@string/post"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:paddingRight="20dp" 
        android:paddingLeft="20dp"
        android:layout_margin="20dp" 
		/>
		
    <Button android:id="@+id/deletePostButton" 
        android:text="@string/delete"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:paddingRight="20dp" 
        android:paddingLeft="20dp"
        android:layout_margin="20dp" 
        />



</LinearLayout>